<resources>
    <string name="app_name">MyContacts</string>
    <string name="icontact">My Contacts</string>
    <string name="dang_nhap">Đăng nhập và sử dụng danh bạ thông minh</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="dang_ky_tai_day">Đăng ký</string>
    <string name="ban_khong_co_tk">Bạn không có tài khoản?</string>
    <string name="dang_ky">Đăng ký để sử dụng danh bạ thông minh</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="email">Email</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="dang_xu_ly">Đang xử lý, vui lòng đợi....</string>
</resources>
